2002-06-03  Terry Biggs <tbiggs@users.sourceforge.net>

	* renamed gnome/create_shortcutbar_viewer.* to gnome/shortcutbar_viewer.*
	* 


2002-05-21  Terry Biggs <tbiggs@users.sourceforge.net>

	* moved create percomm control code from gnome/_editor.c
	  to gnome/_percomm.c
	* moved create studypad control code from gnome/_editor.c
	  to gnome/studypad.c


2002-05-17  Terry Biggs <tbiggs@users.sourceforge.net>

	* removed main/gs_gui_cb.*
	* added gnome/toolbar_nav.*
	* removed main/gs_getinfo_dlg.* - was not used
	* renamed main/gs_information_dlg.* to main/display_info.*
	* renamed backend/display_info.* to backend/display_info_.* 
	* added gnome/_display_info.*


2002-05-16  Terry Biggs <tbiggs@users.sourceforge.net>

	* removed main/gs_editor.* all the functions moved to other files
	* added gnome/studypad.*
	

2002-05-15  Terry Biggs <tbiggs@users.sourceforge.net>

	* moved main/gs_editor_replace.* to gnome/editor_replace.*
	* moved main/gs_editor_search.* to gnome/gs_editor_search.*
	* moved main/gs_editor_toolbar.* to gnome/editor_toolbar.*
	

2002-05-12  Terry Biggs <tbiggs@users.sourceforge.net>

	* moved main/gs_detach_sb.* to gnome/shortcutbar_dialog.*


2002-05-11  Terry Biggs <tbiggs@users.sourceforge.net>

	* moved main/gs_detach_int.* to gnome/interlinear_dialog.*
	

2002-05-10  Terry Biggs <tbiggs@users.sourceforge.net>

	* renamed gnome/commentary_find_dialog.* to gnome/commentary_find.*
	* renamed gnome/gbs_find_dialog.* to gnome/gbs_find.*
	* added gnome/_bibletext_view.*
	* renamed main/gs_viewtext_dlg.* to main/bibletext_view.*
	* renamed backend/viewtext.* to backend/bibletext_view_.*
	* added main/lists.* to handle lists - module, option and Bible books


2002-05-09  Terry Biggs <tbiggs@users.sourceforge.net>

	* split gs_setup.* into main/setup.* and gnome/setup_druid.*
	* the setup_druid caused a segfault after the finish button
	  is pressed - it causes a problem with the splash screen :(