@@ -28,11 +28,11 @@
 #include <gal/e-paned/e-hpaned.h>
 
 /* frontend */
+#include "shortcutbar_main.h"
 #include "shortcutbar_dialog.h"
 
 /* main */ 
 #include "gs_gnomesword.h"
-#include "gs_shortcutbar.h"
 #include "support.h"
 
 
