@@ -1,7 +1,13 @@
+2002-06-04  Terry Biggs <tbiggs@users.sourceforge.net>
+
+	* renamed gnome/create_shortcutbar_search.* to gnome/shortcutbar_search.*
+	* moved main/gs_shortcutbar.* to gnome/shortcutbar_main.*
+	* added function headers to shortcutbar files
+	
+
 2002-06-03  Terry Biggs <tbiggs@users.sourceforge.net>
 
 	* renamed gnome/create_shortcutbar_viewer.* to gnome/shortcutbar_viewer.*
-	* 
 
 
 2002-05-21  Terry Biggs <tbiggs@users.sourceforge.net>
